--- a/e12/index.html
+++ b/e12/index.html
@@ -16,7 +16,41 @@
         <h4>PLAYING PILGRIMS</h4>
       </div>
       <div class="chapterText">
-        <p>Chapter text goes here.</p>
+        <p><q>Christmas won&rsquo;t be Christmas without any presents,</q> grumbled Jo, lying on the rug.</p>
+
+        <p><q>It&rsquo;s so dreadful to be poor!</q> sighed Meg, looking down at her old dress.</p>
+
+        <p><q>I don&rsquo;t think it&rsquo;s fair for some girls to have plenty of pretty things, and other girls nothing at all,</q> added little Amy, with an injured sniff.</p>
+
+        <p><q>We&rsquo;ve got Father and Mother, and each other,</q> said Beth contentedly from her corner.</p>
+
+        <p>The four young faces on which the firelight shone brightened at the cheerful words, but darkened again as Jo said sadly, <q>We haven&rsquo;t got Father, and shall not have him for a long time.</q> She didn&rsquo;t say <q>perhaps never,</q> but each silently added it, thinking of Father far away, where the fighting was.</p>
+
+        <p>Nobody spoke for a minute; then Meg said in an altered tone, <q>You know the reason Mother proposed not having any presents this Christmas was because it is going to be a hard winter for everyone; and she thinks we ought not to spend money for pleasure, when our men are suffering so in the army. We can&rsquo;t do much, but we can make our little sacrifices, and ought to do it gladly. But I am afraid I don&rsquo;t,</q> and Meg shook her head, as she thought regretfully of all the pretty things she wanted.</p>
+
+        <p><q>But I don&rsquo;t think the little we should spend would do any good. We&rsquo;ve each got a dollar, and the army wouldn&rsquo;t be much helped by our giving that. I agree not to expect anything from Mother or you, but I do want to buy Undine and Sintran for myself. I&rsquo;ve wanted it so long,</q> said Jo, who was a bookworm.</p>
+
+        <p><q>I planned to spend mine in new music,</q> said Beth, with a little sigh, which no one heard but the hearth brush and kettle-holder.</p>
+
+        <p><q>I shall get a nice box of Faber&rsquo;s drawing pencils; I really need them,</q> said Amy decidedly.</p>
+
+        <p><q>Mother didn&rsquo;t say anything about our money, and she won&rsquo;t wish us to give up everything. Let&rsquo;s each buy what we want, and have a little fun; I&rsquo;m sure we work hard enough to earn it,</q> cried Jo, examining the heels of her shoes in a gentlemanly manner.</p>
+
+        <p><q>I know I do&mdash;teaching those tiresome children nearly all day, when I&rsquo;m longing to enjoy myself at home,</q> began Meg, in the complaining tone again.</p>
+
+        <p><q>You don&rsquo;t have half such a hard time as I do,</q> said Jo. <q>How would you like to be shut up for hours with a nervous, fussy old lady, who keeps you trotting, is never satisfied, and worries you till you&rsquo;re ready to fly out the window or cry?</q></p>
+
+        <p><q>It&rsquo;s naughty to fret, but I do think washing dishes and keeping things tidy is the worst work in the world. It makes me cross, and my hands get so stiff, I can&rsquo;t practice well at all.</q> And Beth looked at her rough hands with a sigh that any one could hear that time.</p>
+
+        <p><q>I don&rsquo;t believe any of you suffer as I do,</q> cried Amy, <q>for you don&rsquo;t have to go to school with impertinent girls, who plague you if you don&rsquo;t know your lessons, and laugh at your dresses, and label your father if he isn&rsquo;t rich, and insult you when your nose isn&rsquo;t nice.</q></p>
+
+        <p><q>If you mean libel, I&rsquo;d say so, and not talk about labels, as if Papa was a pickle bottle,</q> advised Jo, laughing.</p>
+
+        <p><q>I know what I mean, and you needn&rsquo;t be statirical about it. It&rsquo;s proper to use good words, and improve your vocabilary,</q> returned Amy, with dignity.</p>
+
+        <p><q>Don&rsquo;t peck at one another, children. Don&rsquo;t you wish we had the money Papa lost when we were little, Jo? Dear me! How happy and good we&rsquo;d be, if we had no worries!</q> said Meg, who could remember better times.</p>
+
+        <p><q>You said the other day you thought we were a deal happier than the King children, for they were fighting and fretting all the time, in spite of their money.</q></p>
       </div>
     </div>
   </body>
