--- a/e12/index2.html
+++ b/e12/index2.html
@@ -8,8 +8,8 @@
   <body>
     <div class="container">
       <div class="header">
-        <h1>The Jungle</h1>
-        <h3>Upton Sinclair</h3>
+        <h1>Little Women</h1>
+        <h2>Louisa May Alcott</h2>
       </div>
       <div class="mainText">
         <h2>Chapter 1</h2>
