--- a/e12/index2.html
+++ b/e12/index2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>E12</title>
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/main2.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
   </head>
   <body>
