--- a/e12/index2.html
+++ b/e12/index2.html
@@ -7,12 +7,19 @@
   </head>
   <body>
     <div class="container">
-      <div class="header">
-        <h1>Little Women</h1>
-        <h2>Louisa May Alcott</h2>
+      <div class="title">
+        <h1>Playing Pilgrims</h1>
       </div>
-      <div class="mainText">
-        <h2>Chapter 1</h2>
+      <div class="bookName">
+        <h2>Little Women</h2>
+      </div>
+      <div class="chapterNumber">
+        <h3>CHAPTER ONE</h3>
+      </div>
+      <div class="author">
+        <h4>Louisa May Alcott</h4>
+      </div>
+      <div class="chapterText">
         <p>Chapter text goes here.</p>
       </div>
     </div>
