--- a/e12/index2.html
+++ b/e12/index2.html
@@ -7,17 +7,19 @@
   </head>
   <body>
     <div class="container">
-      <div class="title">
-        <h1>Playing Pilgrims</h1>
-      </div>
-      <div class="bookName">
-        <h2>Little Women</h2>
-      </div>
-      <div class="chapterNumber">
-        <h3>CHAPTER ONE</h3>
-      </div>
-      <div class="author">
-        <h4>Louisa May Alcott</h4>
+      <div class="topBar">
+        <div class="title">
+          <h1>Playing Pilgrims</h1>
+        </div>
+        <div class="bookName">
+          <h2>Little Women</h2>
+        </div>
+        <div class="chapterNumber">
+          <h3>CHAPTER ONE</h3>
+        </div>
+        <div class="author">
+          <h4>Louisa May Alcott</h4>
+        </div>
       </div>
       <div class="chapterText">
         <p>Chapter text goes here.</p>
