--- a/e12/index2.html
+++ b/e12/index2.html
@@ -7,19 +7,17 @@
   </head>
   <body>
     <div class="container">
-      <div class="topBar">
-        <div class="title">
+      <div class="header">
           <h1>Playing Pilgrims</h1>
-        </div>
-        <div class="bookName">
-          <h2>Little Women</h2>
-        </div>
-        <div class="chapterNumber">
-          <h3>CHAPTER ONE</h3>
-        </div>
-        <div class="author">
-          <h4>Louisa May Alcott</h4>
-        </div>
+          <h2>Little Women    CHAPTER ONE     Louisa May Alcott</h2>
+      </div>
+      <div class="leftsquares">
+        <div class="littlesquare"></div>
+        <div class="littlesquare2"></div>
+      </div>
+      <div class="rightsquares">
+        <div class="littlesquare3"></div>
+        <div class="littlesquare4"></div>
       </div>
       <div class="chapterText">
         <p>Chapter text goes here.</p>
