--- a/e12/index2.html
+++ b/e12/index2.html
@@ -12,6 +12,10 @@
           <h2>Little Women    CHAPTER ONE     Louisa May Alcott</h2>
       </div>
       <div class="leftsquares">
+        <div class="littlesquare"></div>
+        <div class="littlesquare2"></div>
+      </div>
+      <div class="text1">
         <p>&ldquo;Christmas won&rsquo;t be Christmas without any presents,&rdquo; grumbled Jo, lying on the rug.</p>
 
         <p>&ldquo;It&rsquo;s so dreadful to be poor!&rdquo; sighed Meg, looking down at her old dress.</p>
@@ -23,8 +27,6 @@
         <p>The four young faces on which the firelight shone brightened at the cheerful words, but darkened again as Jo said sadly, &ldquo;We haven&rsquo;t got Father, and shall not have him for a long time.&rdquo; She didn&rsquo;t say &ldquo;perhaps never,&rdquo; but each silently added it, thinking of Father far away, where the fighting was.</p>
 
         <p>Nobody spoke for a minute; then Meg said in an altered tone, &ldquo;You know the reason Mother proposed not having any presents this Christmas was because it is going to be a hard winter for everyone; and she thinks we ought not to spend money for pleasure, when our men are suffering so in the army. We can&rsquo;t do much, but we can make our little sacrifices, and ought to do it gladly. But I am afraid I don&rsquo;t,&rdquo; and Meg shook her head, as she thought regretfully of all the pretty things she wanted.</p>
-        <div class="littlesquare"></div>
-        <div class="littlesquare2"></div>
       </div>
       <div class="rightsquares">
         <div class="littlesquare3"></div>
