--- a/e12/index2.html
+++ b/e12/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>E12</title>
+    <title>Alexandra Middlebrooks</title>
     <link href="css/main2.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
   </head>
@@ -15,6 +15,7 @@
         <div class="littlesquare"></div>
         <div class="littlesquare2"></div>
       </div>
+      <img src="pictures/room_2.jpg">
       <div class="text1">
         <p>&ldquo;Christmas won&rsquo;t be Christmas without any presents,&rdquo; grumbled Jo, lying on the rug.</p>
 
@@ -31,6 +32,19 @@
       <div class="rightsquares">
         <div class="littlesquare3"></div>
         <div class="littlesquare4"></div>
+      </div>
+      <div class="text2">
+      <p>"But I don't think the little we should spend would do any good. We've each got a dollar, and the army wouldn't be much helped by our giving that. I agree not to expect anything from Mother or you, but I do want to buy Undine and Sintran for myself. I've wanted it so long," said Jo, who was a bookworm.</p>
+
+      <p>"I planned to spend mine in new music," said Beth, with a little sigh, which no one heard but the hearth brush and kettle-holder.</p>
+
+      <p>"I shall get a nice box of Faber's drawing pencils; I really need them," said Amy decidedly.</p>
+
+      <p>"Mother didn't say anything about our money, and she won't wish us to give up everything. Let's each buy what we want, and have a little fun; I'm sure we work hard enough to earn it," cried Jo, examining the heels of her shoes in a gentlemanly manner.</p>
+
+      <p>"I know I do—teaching those tiresome children nearly all day, when I'm longing to enjoy myself at home," began Meg, in the complaining tone again.</p>
+
+      <p>"You don't have half such a hard time as I do," said Jo. "How would you like to be shut up for hours with a nervous, fussy old lady, who keeps you trotting, is never satisfied, and worries you till you're ready to fly out the window or cry?"</p>
       </div>
     </div>
   </body>
