--- a/e12/index2.html
+++ b/e12/index2.html
@@ -34,17 +34,17 @@
         <div class="littlesquare4"></div>
       </div>
       <div class="text2">
-      <p>"But I don't think the little we should spend would do any good. We've each got a dollar, and the army wouldn't be much helped by our giving that. I agree not to expect anything from Mother or you, but I do want to buy Undine and Sintran for myself. I've wanted it so long," said Jo, who was a bookworm.</p>
+      <p>&ldquo;But I don&rsquo;t think the little we should spend would do any good. We&rsquo;ve each got a dollar, and the army wouldn&rsquo;t be much helped by our giving that. I agree not to expect anything from Mother or you, but I do want to buy Undine and Sintran for myself. I&rsquo;ve wanted it so long,&rdquo; said Jo, who was a bookworm.</p>
 
-      <p>"I planned to spend mine in new music," said Beth, with a little sigh, which no one heard but the hearth brush and kettle-holder.</p>
+      <p>&ldquo;I planned to spend mine in new music,&rdquo; said Beth, with a little sigh, which no one heard but the hearth brush and kettle-holder.</p>
 
-      <p>"I shall get a nice box of Faber's drawing pencils; I really need them," said Amy decidedly.</p>
+      <p>&ldquo;I shall get a nice box of Faber&rsquo;s drawing pencils; I really need them,&rdquo; said Amy decidedly.</p>
 
-      <p>"Mother didn't say anything about our money, and she won't wish us to give up everything. Let's each buy what we want, and have a little fun; I'm sure we work hard enough to earn it," cried Jo, examining the heels of her shoes in a gentlemanly manner.</p>
+      <p>&ldquo;Mother didn&rsquo;t say anything about our money, and she won&rsquo;t wish us to give up everything. Let&rsquo;s each buy what we want, and have a little fun; I&rsquo;m sure we work hard enough to earn it,&rdquo; cried Jo, examining the heels of her shoes in a gentlemanly manner.</p>
 
-      <p>"I know I do—teaching those tiresome children nearly all day, when I'm longing to enjoy myself at home," began Meg, in the complaining tone again.</p>
+      <p>&ldquo;I know I do&mdash;teaching those tiresome children nearly all day, when I&rsquo;m longing to enjoy myself at home,&rdquo; began Meg, in the complaining tone again.</p>
 
-      <p>"You don't have half such a hard time as I do," said Jo. "How would you like to be shut up for hours with a nervous, fussy old lady, who keeps you trotting, is never satisfied, and worries you till you're ready to fly out the window or cry?"</p>
+      <p>&ldquo;You don&rsquo;t have half such a hard time as I do,&rdquo; said Jo. &ldquo;How would you like to be shut up for hours with a nervous, fussy old lady, who keeps you trotting, is never satisfied, and worries you till you&rsquo;re ready to fly out the window or cry?&rdquo;</p>
       </div>
     </div>
   </body>
