--- a/e12/index2.html
+++ b/e12/index2.html
@@ -13,9 +13,12 @@
       </div>
       <div class="leftsquares">
         <div class="littlesquare"></div>
+        <div class="littlesquareW"></div>
         <div class="littlesquare2"></div>
       </div>
-      <img src="pictures/room_2.jpg">
+      <div class="image1">
+        <img src="pictures/room_2.jpg">
+      </div>
       <div class="text1">
         <p>&ldquo;Christmas won&rsquo;t be Christmas without any presents,&rdquo; grumbled Jo, lying on the rug.</p>
 
@@ -29,22 +32,26 @@
 
         <p>Nobody spoke for a minute; then Meg said in an altered tone, &ldquo;You know the reason Mother proposed not having any presents this Christmas was because it is going to be a hard winter for everyone; and she thinks we ought not to spend money for pleasure, when our men are suffering so in the army. We can&rsquo;t do much, but we can make our little sacrifices, and ought to do it gladly. But I am afraid I don&rsquo;t,&rdquo; and Meg shook her head, as she thought regretfully of all the pretty things she wanted.</p>
       </div>
+      <div class="image2">
+        <img src="pictures/piano.jpg">
+      </div>
       <div class="rightsquares">
         <div class="littlesquare3"></div>
+        <div class="littlesquareW"></div>
         <div class="littlesquare4"></div>
       </div>
       <div class="text2">
-      <p>&ldquo;But I don&rsquo;t think the little we should spend would do any good. We&rsquo;ve each got a dollar, and the army wouldn&rsquo;t be much helped by our giving that. I agree not to expect anything from Mother or you, but I do want to buy Undine and Sintran for myself. I&rsquo;ve wanted it so long,&rdquo; said Jo, who was a bookworm.</p>
+        <p>&ldquo;But I don&rsquo;t think the little we should spend would do any good. We&rsquo;ve each got a dollar, and the army wouldn&rsquo;t be much helped by our giving that. I agree not to expect anything from Mother or you, but I do want to buy Undine and Sintran for myself. I&rsquo;ve wanted it so long,&rdquo; said Jo, who was a bookworm.</p>
 
-      <p>&ldquo;I planned to spend mine in new music,&rdquo; said Beth, with a little sigh, which no one heard but the hearth brush and kettle-holder.</p>
+        <p>&ldquo;I planned to spend mine in new music,&rdquo; said Beth, with a little sigh, which no one heard but the hearth brush and kettle-holder.</p>
 
-      <p>&ldquo;I shall get a nice box of Faber&rsquo;s drawing pencils; I really need them,&rdquo; said Amy decidedly.</p>
+        <p>&ldquo;I shall get a nice box of Faber&rsquo;s drawing pencils; I really need them,&rdquo; said Amy decidedly.</p>
 
-      <p>&ldquo;Mother didn&rsquo;t say anything about our money, and she won&rsquo;t wish us to give up everything. Let&rsquo;s each buy what we want, and have a little fun; I&rsquo;m sure we work hard enough to earn it,&rdquo; cried Jo, examining the heels of her shoes in a gentlemanly manner.</p>
+        <p>&ldquo;Mother didn&rsquo;t say anything about our money, and she won&rsquo;t wish us to give up everything. Let&rsquo;s each buy what we want, and have a little fun; I&rsquo;m sure we work hard enough to earn it,&rdquo; cried Jo, examining the heels of her shoes in a gentlemanly manner.</p>
 
-      <p>&ldquo;I know I do&mdash;teaching those tiresome children nearly all day, when I&rsquo;m longing to enjoy myself at home,&rdquo; began Meg, in the complaining tone again.</p>
+        <p>&ldquo;I know I do&mdash;teaching those tiresome children nearly all day, when I&rsquo;m longing to enjoy myself at home,&rdquo; began Meg, in the complaining tone again.</p>
 
-      <p>&ldquo;You don&rsquo;t have half such a hard time as I do,&rdquo; said Jo. &ldquo;How would you like to be shut up for hours with a nervous, fussy old lady, who keeps you trotting, is never satisfied, and worries you till you&rsquo;re ready to fly out the window or cry?&rdquo;</p>
+        <p>&ldquo;You don&rsquo;t have half such a hard time as I do,&rdquo; said Jo. &ldquo;How would you like to be shut up for hours with a nervous, fussy old lady, who keeps you trotting, is never satisfied, and worries you till you&rsquo;re ready to fly out the window or cry?&rdquo;</p>
       </div>
     </div>
   </body>
