--- a/e12/index2.html
+++ b/e12/index2.html
@@ -3,6 +3,7 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="css/main2.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/fxx4xab.css">
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
   </head>
   <body>
