--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
       <li><a href="generic/index.html">generic</a></li>
       <li><a href="Project1/index.html">project 1</a></li>
       <li><a href="Project 2/index/openingindex.html">project 2</a></li>
+      <li><a href="Project3/index/openingindex.html">project 3</a></li>
   </body>
 </html>
