--- a/Project3/index/index.html
+++ b/Project3/index/index.html
@@ -8,14 +8,12 @@
   <body>
     <div class="container">
       <div class="header">
-        <h1></h1>
-        <h2></h2>
-      </div>
-      <div class="titles">
-        <h3></h3>
-        <h4></h4>
-      </div>
-      <div class="chapterText">
+        <div class="pic1">
+        </div>
+        <div class="titleAuthor">
+          <h3></h3>
+          <h4></h4>
+        </div>
       </div>
     </div>
   </body>
