--- a/Project3/index/index.html
+++ b/Project3/index/index.html
@@ -9,6 +9,7 @@
     <div class="container">
       <div class="header">
         <div class="pic1">
+          <img src="../pictures/P2_pics/Almonds_8.jpg">
         </div>
         <div class="titleAuthor">
           <h3></h3>
