--- a/Project3/index/index.html
+++ b/Project3/index/index.html
@@ -12,10 +12,12 @@
           <img src="../pictures/P2_pics/Almonds_8.jpg">
         </div>
         <div class="titleAuthor">
-          <h3></h3>
-          <h4></h4>
+          <h1>Here's the Real Problem With Almonds</h1>
+          <h2>By TOM PHILPOTT and JULIA LURIE December 31, 2015</h2>
         </div>
       </div>
+      <div class="bodyContent">
+        
     </div>
   </body>
 </html>
