--- a/Project3/index/index.html
+++ b/Project3/index/index.html
@@ -27,6 +27,12 @@
             <img src="../pictures/P2_pics/Almonds_1.jpg">
           </div>
         </div>
+        <div class="section2">
+          <div class="pic3">
+          </div>
+          <div class="text1">
+          </div>    
+        </div>
       </div>
     </div>
   </body>
