--- a/Project3/index/index.html
+++ b/Project3/index/index.html
@@ -37,6 +37,17 @@
             <p>It should be noted, though, that we export far more almonds than alfalfa: About two-thirds of California&rsquo;s almond and pistachio crops are sent overseas&mdash;a de facto export of California&rsquo;s overtapped water resources.</p>
           </div>
         </div>
+        <div class="section3">
+          <div class="pic4">
+            <img src="../pictures/P2_pics/Almonds_5.jpg">
+          </div>
+          <div class="text2">
+            <p>While alfalfa fields are shrinking, almond fields are expanding&mdash;in a big way. The drought is already pushing California farmers out of high-water, low-value crops like alfalfa and cotton, and into almonds and two other pricey nuts, pistachios and walnuts. This year, California acreage devoted to alfalfa is expected to shrink 11 percent, and cotton acres look set to dwindle to their lowest level since the 1920s.</p>
+
+            <p>Meanwhile, the market is pushing almonds and other nuts in the opposite direction. At a confab in California&rsquo;s nut-rich, water-challenged San Joaquin County, Stewart Resnick, chief of Paramount Farms, by far the state&rsquo;s largest nut grower, explained why in a speech, as documented by an account in the trade journal Western Farm Press. Almonds, he said, deliver farmers an average net return of $1,431 per acre. Pistachios, another fast-expanding nut hotly promoted by the Paramount farming empire, net even more: $3,519 per acre.
+            Given that Paramount reportedly manages 50,000 acres of combined almonds and pistachios, it&rsquo;s safe to say there&rsquo;s big profits in growing those nuts. And the company, which also buys and processes nuts from other farmers and sells them under the Wonderful brand, plans to expand by 50 percent in the next five years. Currently the company farms 30,000 acres on its own and buys pistachios from farms occupying another 100,000 acres. By 2020, the company&rsquo;s &ldquo;goal is 150,000 partner acres, 33,000 Paramount acres,&rdquo; which would be a 40 percent jump in just five years. And that&rsquo;s on top of the 118 percent expansion in pistachio acres over the past decade, according to figures Resnick delivered at the conference.</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
