--- a/Project3/index/index.html
+++ b/Project3/index/index.html
@@ -48,6 +48,14 @@
             Given that Paramount reportedly manages 50,000 acres of combined almonds and pistachios, it&rsquo;s safe to say there&rsquo;s big profits in growing those nuts. And the company, which also buys and processes nuts from other farmers and sells them under the Wonderful brand, plans to expand by 50 percent in the next five years. Currently the company farms 30,000 acres on its own and buys pistachios from farms occupying another 100,000 acres. By 2020, the company&rsquo;s &ldquo;goal is 150,000 partner acres, 33,000 Paramount acres,&rdquo; which would be a 40 percent jump in just five years. And that&rsquo;s on top of the 118 percent expansion in pistachio acres over the past decade, according to figures Resnick delivered at the conference.</p>
           </div>
         </div>
+        <div class="section4">
+          <div class="text3">
+            <p></p>
+          </div>
+          <div class="pic5">
+            <img src="../pictures/P2_pics/Almonds_2.png">
+          </div>
+        </div>
       </div>
     </div>
   </body>
