--- a/Project3/index/index.html
+++ b/Project3/index/index.html
@@ -50,10 +50,20 @@
         </div>
         <div class="section4">
           <div class="text3">
-            <p></p>
+            <p>Unlike other crops, almonds always require a lot of water&mdash;even during drought.  Annual crops like cotton, alfalfa, and veggies are flexible&mdash;farmers can fallow them in dry years. That&rsquo;s not so for nuts, which need to be watered every year, drought or no, or the trees die, wiping out farmers&rsquo; investments.</p>
+
+            <p>Already, strains are showing. Back in 2013, a team led by US Geological Survey hydrologist Michelle Sneed discovered that a 1,200-square-mile swath of the southern Central Valley&mdash;a landmass more than twice the size of Los Angeles&mdash;had been sinking by as much as 11 inches per year, because the water table had fallen from excessive pumping. In an interview last year, Sneed told me the ongoing exodus from annual crops and pasture to nuts likely played a big role.</p>
           </div>
           <div class="pic5">
             <img src="../pictures/P2_pics/Almonds_2.png">
+          </div>
+        </div>
+        <div class="section5">
+          <div class="pic6">
+            <img src="../pictures/P2_pics/Almonds_7.jpg">
+          </div>
+          <div class="text4">
+            <p>Some nut growers are advocating against water regulation&mdash;during the worst drought in California&rsquo;s history. &ldquo;I&rsquo;ve been smiling all the way to the bank,&rdquo; one pistachio grower told the audience at the Paramount event, according to the Western Farm Press account. As for water, that&rsquo;s apparently a political problem, not an ecological one, for Paramount. &ldquo;Pistachios are valued at $40,000 an acre,&rdquo; Bill Phillimore, executive vice president of Paramount Farming, reportedly told the crowd. &ldquo;How much are you spending in the political arena to preserve that asset?&rdquo; Apparently, he meant: protect it from pesky regulators questioning your water use. He &ldquo;urged growers to contribute three-quarters of a cent on every pound of pistachios sold to a water advocacy effort,&rdquo; Western Farm Press reported.</p>
           </div>
         </div>
       </div>
