--- a/Project3/index/index.html
+++ b/Project3/index/index.html
@@ -75,6 +75,14 @@
             <img src="../pictures/P2_pics/Almonds_9.jpg">
           </div>
         </div>
+        <div class="section7">
+          <div class="pic8">
+            <img src="../pictures/P2_pics/Almonds_4.jpg">
+          </div>
+          <div class="text6">
+            <p>This story was originally published by Mother Jones and is reproduced here as part of our Climate Desk collaboration.</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
