--- a/Project3/index/index.html
+++ b/Project3/index/index.html
@@ -82,7 +82,7 @@
             <img src="../pictures/P2_pics/Almonds_4.jpg">
           </div>
           <div class="text6">
-            <p>This story was originally published by Mother Jones and is reproduced here as part of our Climate Desk collaboration.</p>
+            <h4>This story was originally published by Mother Jones and is reproduced here as part of our Climate Desk collaboration.</h4>
           </div>
         </div>
       </div>
