--- a/Project3/index/index.html
+++ b/Project3/index/index.html
@@ -29,6 +29,8 @@
             <img src="../pictures/P2_pics/Almonds_1.jpg">
           </div>
         </div>
+        <div class="greenShape">
+        </div>
         <div class="section2">
           <div class="pic3">
             <img src="../pictures/P2_pics/Almonds_3.jpg">
@@ -70,6 +72,8 @@
           <div class="text4">
             <h8>4.</h8>
             <p>Some nut growers are advocating against water regulation&mdash;during the worst drought in California&rsquo;s history. &ldquo;I&rsquo;ve been smiling all the way to the bank,&rdquo; one pistachio grower told the audience at the Paramount event, according to the Western Farm Press account. As for water, that&rsquo;s apparently a political problem, not an ecological one, for Paramount. &ldquo;Pistachios are valued at $40,000 an acre,&rdquo; Bill Phillimore, executive vice president of Paramount Farming, reportedly told the crowd. &ldquo;How much are you spending in the political arena to preserve that asset?&rdquo; Apparently, he meant: protect it from pesky regulators questioning your water use. He &ldquo;urged growers to contribute three-quarters of a cent on every pound of pistachios sold to a water advocacy effort,&rdquo; Western Farm Press reported.</p>
+          </div>
+          <div class="greenShape2">
           </div>
         </div>
         <div class="section6">
