--- a/Project3/index/index.html
+++ b/Project3/index/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="header">
         <div class="pic1">
-          <img src="../pictures/P2_pics/Almonds_8.jpg">
+          <!-- <img src="../pictures/P2_pics/Almonds_8.jpg"> -->
         </div>
         <div class="titleAuthor">
           <h1>Here's the Real Problem With Almonds</h1>
