--- a/Project3/index/index.html
+++ b/Project3/index/index.html
@@ -14,7 +14,11 @@
         </div>
         <div class="titleAuthor">
           <h1>Here's the Real Problem With Almonds</h1>
-          <h2>By TOM PHILPOTT and JULIA LURIE December 31, 2015</h2>
+          <div class="byline">
+            <h2>By TOM PHILPOTT and</h2>
+            <h2>JULIA LURIE</h2>
+            <h2>December 31, 2015</h2>
+          </div>
         </div>
       </div>
       <div class="bodyContent">
