--- a/Project3/index/headertest.html
+++ b/Project3/index/headertest.html
@@ -14,9 +14,9 @@
         </div>
         <div class="titleAuthor">
           <h1>Here's the Real Problem With Almonds</h1>
-          <h2>By TOM PHILPOTT and JULIA LURIE December 31, 2015</h2>
+          <!-- <h2>By TOM PHILPOTT and JULIA LURIE December 31, 2015</h2> -->
         </div>
       </div>
-    </div>  
+    </div>
   </body>
-  </html>
+</html>
