--- a/e13/openingindex.html
+++ b/e13/openingindex.html
@@ -10,8 +10,8 @@
     <ul>
       <li><a href="index.html">Instructions</a></li>
       <li><a href="">My Drawing</a></li>
-      <li><a href="">Najwan's Drawing</a></li>
-      <li><a href="">Veronica's Drawing</a></li>
+      <li><a href="">Drawing</a></li>
+      <li><a href="">Drawing</a></li>
     </ul>
   </body>
 </html>
