--- a/Project3/index/openingindex.html
+++ b/Project3/index/openingindex.html
@@ -9,5 +9,6 @@
     <h1>Project 3</h1>
     <ul>
       <li><a href="index.html">First Draft: Desktop</a></li>
+      <li><a href="index2.html">Second Draft: Fully Responsive</a></li>
   </body>
 </html>
