--- a/Project3/index/index2.html
+++ b/Project3/index/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>E12</title>
+    <title>Alexandra Middlebrooks</title>
     <link href="../css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/fxx4xab.css">
