--- a/Project3/index/index2.html
+++ b/Project3/index/index2.html
@@ -37,7 +37,7 @@
         </div>
         <div class="section2">
           <div class="pic3">
-            <img src="../pictures/P2_pics/Almonds_3.jpg">
+            <!-- <img src="../pictures/P2_pics/Almonds_3.jpg"> -->
           </div>
           <div class="text1">
             <h5>1.</h5>
