--- a/Project3/index/index2.html
+++ b/Project3/index/index2.html
@@ -40,7 +40,9 @@
             <!-- <img src="../pictures/P2_pics/Almonds_3.jpg"> -->
           </div>
           <div class="text1">
-            <h5>1.</h5>
+            <div class="number1">
+              <h5>1.</h5>
+            </div>
             <p>Most of our almonds end up overseas. Almonds are the second-thirstiest crop in California&mdash;behind alfalfa, a superfood of sorts for cows that sucks up 15 percent of the state&rsquo;s irrigation water. Gizmodo&rsquo;s Walker&mdash;along with many others&mdash;wants to shift the focus from almonds to the ubiquitous feed crop, wondering, &ldquo;Why are we using more and more of our water to grow hay?&rdquo; Especially since alfalfa is a relatively low-value crop&mdash;about a quarter of the per acre value of almonds&mdash;and about a fifth of it is exported.</p>
 
             <p>It should be noted, though, that we export far more almonds than alfalfa: About two-thirds of California&rsquo;s almond and pistachio crops are sent overseas&mdash;a de facto export of California&rsquo;s overtapped water resources.</p>
