--- a/Project3/index/index2.html
+++ b/Project3/index/index2.html
@@ -52,8 +52,10 @@
           <div class="pic4">
             <img src="../pictures/P2_pics/Almonds_5.jpg">
           </div>
-          <div class="text2">
+          <div class="number2">
             <h6>2.</h6>
+          </div>
+          <div class="text2">
             <p>While alfalfa fields are shrinking, almond fields are expanding&mdash;in a big way. The drought is already pushing California farmers out of high-water, low-value crops like alfalfa and cotton, and into almonds and two other pricey nuts, pistachios and walnuts. This year, California acreage devoted to alfalfa is expected to shrink 11 percent, and cotton acres look set to dwindle to their lowest level since the 1920s.</p>
 
             <p>Meanwhile, the market is pushing almonds and other nuts in the opposite direction. At a confab in California&rsquo;s nut-rich, water-challenged San Joaquin County, Stewart Resnick, chief of Paramount Farms, by far the state&rsquo;s largest nut grower, explained why in a speech, as documented by an account in the trade journal Western Farm Press. Almonds, he said, deliver farmers an average net return of $1,431 per acre. Pistachios, another fast-expanding nut hotly promoted by the Paramount farming empire, net even more: $3,519 per acre.
