--- a/Project3/index/index2.html
+++ b/Project3/index/index2.html
@@ -64,7 +64,9 @@
         </div>
         <div class="section4">
           <div class="text3">
-            <h6>3.</h6>
+            <div class="number3">
+              <h6>3.</h6>
+          </div>
             <p>Unlike other crops, almonds always require a lot of water&mdash;even during drought.  Annual crops like cotton, alfalfa, and veggies are flexible&mdash;farmers can fallow them in dry years. That&rsquo;s not so for nuts, which need to be watered every year, drought or no, or the trees die, wiping out farmers&rsquo; investments.</p>
 
             <p>Already, strains are showing. Back in 2013, a team led by US Geological Survey hydrologist Michelle Sneed discovered that a 1,200-square-mile swath of the southern Central Valley&mdash;a landmass more than twice the size of Los Angeles&mdash;had been sinking by as much as 11 inches per year, because the water table had fallen from excessive pumping. In an interview last year, Sneed told me the ongoing exodus from annual crops and pasture to nuts likely played a big role.</p>
