--- a/Project3/index/index2.html
+++ b/Project3/index/index2.html
@@ -89,8 +89,10 @@
           </div>
         </div>
         <div class="section6">
-          <div class="text5">
+          <div class="number5">
             <h6>5.</h6>
+          </div>
+          <div class="text5">
             <p>Mostly, it&rsquo;s not small-scale farmers that are getting rich off the almond boom. With their surging overseas sales, almonds and pistachios have drawn in massive financial players hungry for a piece of the action. As Mother Jones reported last year, Hancock Agricultural Investment Group, an investment owned by the Canadian insurance and financial services giant Manulife Financial, owns at least 24,000 acres of almonds, pistachios, and walnuts, making it California&rsquo;s second-largest nut grower. TIAA-CREF, a large retirement and investment fund that owns 37,000 acres of California farmland, and boasts that it&rsquo;s one of the globe&rsquo;s top five almond producers.
             Then there&rsquo;s Terrapin Fabbri Management, a private equity firm that &ldquo;manages more than $100 million of farm assets on behalf of institutional investors and high net worth clients&rdquo; and says it&rsquo;s &ldquo;focused on capitalizing on the increasing global demand for California&rsquo;s agricultural output.&rdquo; In a piece earlier this year, The Economist pointed out that Terrapin had &ldquo;bought a dairy company and some vineyards and tomato fields in California, and converted all to grow almonds, whose price has soared as the Chinese have gone nuts for them.&rdquo; The magazine added that &ldquo;such conversions require up-front capital&rdquo;&mdash;e.g., to drop wells&mdash;&rdquo;and the ability to survive without returns for years.&rdquo; Those aren&rsquo;t privileges many small-scale farmers enjoy.</p>
           </div>
