--- a/e13/index.html
+++ b/e13/index.html
@@ -5,7 +5,7 @@
     <link href="../css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Baloo&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body id="images">
     <h1>Instructions</h1>
     <ol>
     <li>Open XD.</li>
@@ -33,5 +33,11 @@
     <li>Set the format to PNG, Export for: Web, Designed at 1x, then click Export All Artboards.</li>
     <li>Email a PNG attachment of the file to me.</li>
     </ol>
+    <p>Original</p>
+    <img src="drawings/e13.png">
+    <p>Peer 1</p>
+    <img src="drawings/Najwan.png">
+    <p>Peer 2</p>
+    <img src="drawings/Ronnie.png">
   </body>
 </html>
