--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li><a href="e10/index.html">exercise 10</a></li>
       <li><a href="e11/index.html">exercise 11</a></li>
       <li><a href="e12/openingindex.html">exercise 12</a></li>
-      <li><a href="e13/openingindex.html">exercise 13</a></li>
+      <li><a href="e13/index.html">exercise 13</a></li>
       <li><a href="generic/index.html">generic</a></li>
       <li><a href="Project1/index.html">project 1</a></li>
       <li><a href="Project 2/index/openingindex.html">project 2</a></li>
