--- a/e13/index.html
+++ b/e13/index.html
@@ -5,7 +5,7 @@
     <link href="../css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Baloo&display=swap" rel="stylesheet">
   </head>
-  <body id="images">
+  <body>
     <h1>Instructions</h1>
     <ol>
     <li>Open XD.</li>
