--- a/e14/index.html
+++ b/e14/index.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <title>Alexandra Middlebrooks</title>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <div class=""></div>
-    <div class=""></div>
-    <div class=""></div>
+    <div class="scenecontainer">
+      <div class="oventop"></div>
+      <div class="ovensurface"></div>
+      <div class="ovenbody"></div>
+    </div>
   </body>
 </html>
