--- a/e14/index.html
+++ b/e14/index.html
@@ -9,6 +9,7 @@
       <div class="oventop"></div>
       <div class="ovensurface"></div>
       <div class="ovenbody"></div>
+      <div class="handle"></div>
     </div>
   </body>
 </html>
