--- a/e14/index.html
+++ b/e14/index.html
@@ -10,6 +10,7 @@
       <div class="ovensurface"></div>
       <div class="ovenbody"></div>
       <div class="handle"></div>
+      <div class="window"></div>
     </div>
   </body>
 </html>
