--- a/e14/index.html
+++ b/e14/index.html
@@ -11,6 +11,7 @@
       <div class="ovenbody"></div>
       <div class="handle"></div>
       <div class="window"></div>
+      <div class="rack"></div>
     </div>
   </body>
 </html>
