--- a/e14/index.html
+++ b/e14/index.html
@@ -12,6 +12,8 @@
       <div class="handle"></div>
       <div class="window"></div>
       <div class="rack"></div>
+      <div class="cakebody"></div>
+      <div class="cakestripe"></div>
     </div>
   </body>
 </html>
