--- a/e14/index.html
+++ b/e14/index.html
@@ -3,9 +3,13 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="scenecontainer">
+      <div class="text">
+        <p>Time for Cake!</p>
+      </div>
       <div class="oventop"></div>
       <div class="ovensurface"></div>
       <div class="ovenbody"></div>
