--- a/e14/index.html
+++ b/e14/index.html
@@ -18,6 +18,11 @@
       <div class="rack"></div>
       <div class="cakebody"></div>
       <div class="cakestripe"></div>
+      <div class="cakestripe2"></div>
+      <div class="button"></div>
+      <div class="button2"></div>
+      <div class="button3"></div>
+      <div class="button4"></div>
     </div>
   </body>
 </html>
