--- a/e14/index.html
+++ b/e14/index.html
@@ -23,6 +23,7 @@
       <div class="button2"></div>
       <div class="button3"></div>
       <div class="button4"></div>
+      <div class="time"></div>
     </div>
   </body>
 </html>
