--- a/e14/index.html
+++ b/e14/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="scenecontainer">
       <div class="text">
-        <p>Time for Cake!</p>
+        <p>Bake the cake</p>
       </div>
       <div class="oventop"></div>
       <div class="ovensurface"></div>
