--- a/e14/index.html
+++ b/e14/index.html
@@ -6,7 +6,19 @@
     <link href="https://fonts.googleapis.com/css?family=Baloo&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="scenecontainer">
+    <div class="scenecontainer1">
+      <div class="text">
+        <p>Choose a cake</p>
+      </div>
+      <div class="cover"></div>
+      <div class="pages"></div>
+      <div class="picture"></div>
+      <div class="recipe"></div>
+      <div class="recipe2"></div>
+      <div class="recipe3"></div>
+      <div class="recipe4"></div>
+    </div>
+    <div class="scenecontainer2">
       <div class="text">
         <p>Bake the cake</p>
       </div>
@@ -26,6 +38,11 @@
       <div class="time"></div>
       <div class="numbers">
         <p>5:30</p>
+      </div>
+    </div>
+    <div class="scenecontainer3">
+      <div class="text">
+        <p>Enjoy!</p>
       </div>
     </div>
   </body>
