--- a/e14/index.html
+++ b/e14/index.html
@@ -13,10 +13,19 @@
       <div class="cover"></div>
       <div class="pages"></div>
       <div class="picture"></div>
+      <div class="picture2"></div>
       <div class="recipe"></div>
       <div class="recipe2"></div>
       <div class="recipe3"></div>
       <div class="recipe4"></div>
+      <div class="recipe5"></div>
+      <div class="recipe6"></div>
+      <div class="recipe7"></div>
+      <div class="recipe8"></div>
+      <div class="recipe9"></div>
+      <div class="recipe10"></div>
+      <div class="recipe11"></div>
+      <div class="recipe12"></div>
     </div>
     <div class="scenecontainer2">
       <div class="text">
