--- a/e14/index.html
+++ b/e14/index.html
@@ -8,12 +8,13 @@
   <body>
     <div class="scenecontainer1">
       <div class="text">
-        <p>Choose a cake</p>
+        <p>Choose a recipe</p>
       </div>
       <div class="cover"></div>
       <div class="pages"></div>
       <div class="picture"></div>
       <div class="picture2"></div>
+      <div class="divider"></div>
       <div class="recipe"></div>
       <div class="recipe2"></div>
       <div class="recipe3"></div>
@@ -53,6 +54,9 @@
       <div class="text">
         <p>Enjoy!</p>
       </div>
+      <div class="cakebody2"></div>
+      <div class="cakestripeB"></div>
+      <div class="cakestripeC"></div>
     </div>
   </body>
 </html>
