--- a/e14/index.html
+++ b/e14/index.html
@@ -54,6 +54,9 @@
       <div class="text">
         <p>Enjoy!</p>
       </div>
+      <div class="plate"></div>
+      <div class="stand"></div>
+      <div class="base"></div>
       <div class="cakebody2"></div>
       <div class="cakestripeB"></div>
       <div class="cakestripeC"></div>
