--- a/e14/index.html
+++ b/e14/index.html
@@ -60,6 +60,8 @@
       <div class="cakebody2"></div>
       <div class="cakestripeB"></div>
       <div class="cakestripeC"></div>
+      <div class="candle"></div>
+      <div class="flame"></div>
     </div>
   </body>
 </html>
