--- a/e14/index.html
+++ b/e14/index.html
@@ -27,6 +27,9 @@
       <div class="recipe10"></div>
       <div class="recipe11"></div>
       <div class="recipe12"></div>
+      <div class="asterik">
+        <p>*</p>
+      </div>
     </div>
     <div class="scenecontainer2">
       <div class="text">
