--- a/e14/index.html
+++ b/e14/index.html
@@ -27,8 +27,8 @@
       <div class="recipe10"></div>
       <div class="recipe11"></div>
       <div class="recipe12"></div>
-      <div class="asterik">
-        <p>*</p>
+      <div class="arrow">
+        <p>-></p>
       </div>
     </div>
     <div class="scenecontainer2">
