--- a/Project3/index/openingindex.html
+++ b/Project3/index/openingindex.html
@@ -10,5 +10,6 @@
     <ul>
       <li><a href="index.html">First Draft: Desktop</a></li>
       <li><a href="index2.html">Second Draft: Fully Responsive</a></li>
+      <li><a href="indexFinal.html">Final (under construction)</a></li>
   </body>
 </html>
