--- a/Project3/index/indexFinal.html
+++ b/Project3/index/indexFinal.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div class="container">
+      <div class="greenShape"></div>
+      <div class="greenShape2"></div>
       <div class="header clearfix">
         <div class="pic1">
           <!-- <img src="../pictures/P2_pics/Almonds_8.jpg"> -->
@@ -83,29 +85,27 @@
           <div class="text4">
             <p>Some nut growers are advocating against water regulation&mdash;during the worst drought in California&rsquo;s history. &ldquo;I&rsquo;ve been smiling all the way to the bank,&rdquo; one pistachio grower told the audience at the Paramount event, according to the Western Farm Press account. As for water, that&rsquo;s apparently a political problem, not an ecological one, for Paramount. &ldquo;Pistachios are valued at $40,000 an acre,&rdquo; Bill Phillimore, executive vice president of Paramount Farming, reportedly told the crowd. &ldquo;How much are you spending in the political arena to preserve that asset?&rdquo; Apparently, he meant: protect it from pesky regulators questioning your water use. He &ldquo;urged growers to contribute three-quarters of a cent on every pound of pistachios sold to a water advocacy effort,&rdquo; Western Farm Press reported.</p>
           </div>
-      </div>
-      <div class="section6 clearfix">
-        <div class="text5">
-          <p>Mostly, it&rsquo;s not small-scale farmers that are getting rich off the almond boom. With their surging overseas sales, almonds and pistachios have drawn in massive financial players hungry for a piece of the action. As Mother Jones reported last year, Hancock Agricultural Investment Group, an investment owned by the Canadian insurance and financial services giant Manulife Financial, owns at least 24,000 acres of almonds, pistachios, and walnuts, making it California&rsquo;s second-largest nut grower. TIAA-CREF, a large retirement and investment fund that owns 37,000 acres of California farmland, and boasts that it&rsquo;s one of the globe&rsquo;s top five almond producers.
-          Then there&rsquo;s Terrapin Fabbri Management, a private equity firm that &ldquo;manages more than $100 million of farm assets on behalf of institutional investors and high net worth clients&rdquo; and says it&rsquo;s &ldquo;focused on capitalizing on the increasing global demand for California&rsquo;s agricultural output.&rdquo; In a piece earlier this year, The Economist pointed out that Terrapin had &ldquo;bought a dairy company and some vineyards and tomato fields in California, and converted all to grow almonds, whose price has soared as the Chinese have gone nuts for them.&rdquo; The magazine added that &ldquo;such conversions require up-front capital&rdquo;&mdash;e.g., to drop wells&mdash;&rdquo;and the ability to survive without returns for years.&rdquo; Those aren&rsquo;t privileges many small-scale farmers enjoy.</p>
         </div>
-        <div class="pic7">
-          <img src="../pictures/P2_pics/Almonds_9.jpg">
-          <div class="number5">
-            <h6>5.</h6>
+        <div class="section6 clearfix">
+          <div class="text5">
+            <p>Mostly, it&rsquo;s not small-scale farmers that are getting rich off the almond boom. With their surging overseas sales, almonds and pistachios have drawn in massive financial players hungry for a piece of the action. As Mother Jones reported last year, Hancock Agricultural Investment Group, an investment owned by the Canadian insurance and financial services giant Manulife Financial, owns at least 24,000 acres of almonds, pistachios, and walnuts, making it California&rsquo;s second-largest nut grower. TIAA-CREF, a large retirement and investment fund that owns 37,000 acres of California farmland, and boasts that it&rsquo;s one of the globe&rsquo;s top five almond producers.
+          Then there&rsquo;s Terrapin Fabbri Management, a private equity firm that &ldquo;manages more than $100 million of farm assets on behalf of institutional investors and high net worth clients&rdquo; and says it&rsquo;s &ldquo;focused on capitalizing on the increasing global demand for California&rsquo;s agricultural output.&rdquo; In a piece earlier this year, The Economist pointed out that Terrapin had &ldquo;bought a dairy company and some vineyards and tomato fields in California, and converted all to grow almonds, whose price has soared as the Chinese have gone nuts for them.&rdquo; The magazine added that &ldquo;such conversions require up-front capital&rdquo;&mdash;e.g., to drop wells&mdash;&rdquo;and the ability to survive without returns for years.&rdquo; Those aren&rsquo;t privileges many small-scale farmers enjoy.</p>
+          </div>
+          <div class="pic7">
+            <img src="../pictures/P2_pics/Almonds_9.jpg">
+            <div class="number5">
+              <h6>5.</h6>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="section7 clearfix">
-        <div class="pic8">
-          <img src="../pictures/P2_pics/Almonds_4.jpg">
+        <div class="section7 clearfix">
+          <div class="pic8">
+            <img src="../pictures/P2_pics/Almonds_4.jpg">
+          </div>
+          <div class="text6">
+              <h4>This story was originally published by Mother Jones and is reproduced here as part of our Climate Desk collaboration.</h4>
+            </div>
         </div>
-        <div class="text6">
-            <h4>This story was originally published by Mother Jones and is reproduced here as part of our Climate Desk collaboration.</h4>
-        </div>
-      </div>
-        <!-- <div class="greenShape"></div> -->
-        <!-- <div class="greenShape2"></div> -->
       </div>
     </div>
   </body>
