--- a/Project5/index2.html
+++ b/Project5/index2.html
@@ -2,10 +2,28 @@
 <html>
   <head>
       <title>Alexandra Middlebrooks</title>
-      <link href="../css/main.css" rel="stylesheet">
+      <link href="main.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Baloo&display=swap" rel="stylesheet">
   </head>
   <body>
-
+    <div class="container">
+      <div class="deskbody"></div>
+      <div class="smalldrawer"></div>
+      <div class="smalldrawer2"></div>
+      <div class="smalldrawer3"></div>
+      <div class="largedrawer"></div>
+      <div class="largedrawer"></div>
+      <div class="largedrawer"></div>
+      <div class="smallhandle"></div>
+      <div class="smallhandle"></div>
+      <div class="smallhandle"></div>
+      <div class="largehandle"></div>
+      <div class="largehandle"></div>
+      <div class="largehandle"></div>
+      <div class="frontleg"></div>
+      <div class="frontleg"></div>
+      <div class="backleg"></div>
+      <div class="backleg"></div>
+    </div>
   </body>
 </html>
